# evitalent-rank

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.py
app/: page_navigation.py  safe_view_models.py  streamlit_app.py  ui_copy.py  ui_state.py  ui_theme.py
config/: app_settings.yaml  competency_ontology.yaml  domain_weights.yaml  llm_settings.yaml  metric_normalization.yaml  official_samples_settings.yaml
models/: Modelfile.evitalent
prompts/: resume_extraction_system_v1.txt  resume_extraction_user_template_v1.txt  resume_structure_extraction_system_v1.txt  single_achievement_extraction_system_v1.txt  single_achievement_extraction_user_template_v1.txt
schemas/: audit_result.schema.json  candidate_extraction.schema.json  llm_single_event_payload.schema.json  llm_structure_payload.schema.json  ranking_result.schema.json
scripts/: audit_official_sample_inventory.py  batch_process_resumes.py  build_safe_assistant_index.py  check_assistant_models.py  check_llm_connection.py  check_ollama_connection.py  confirm_official_sample_redaction_review.py  evaluate_demo_extraction_accuracy.py  evaluate_extraction_method_comparison.py  export_ablation_analysis.py  export_demo_ranking_json.py  export_interview_recommendations.py  export_official_sample_safe_report.py  export_ranking_expert_consistency.py  export_report_materials.py  export_safety_fairness_audit_analysis.py  export_six_domain_extraction_accuracy.py  generate_demo_report.py  generate_demo_resume_files.py  init_database.py  rank_official_samples_v1.py  run_assistant_fixture_demo.py  (+19 more)
(+272 files in other folders)
